Implements /tag endpoint API
