# controllers/Developers.js
@@ -25,6 +25,17 @@ module.exports.addSong = function addSong (req, res, next) {
     });
 };
 
+module.exports.addTag = function addTag (req, res, next) {
+  var tagItem = req.swagger.params['TagItem'].value;
+  Developers.addTag(tagItem)
+    .then(function (response) {
+      utils.writeJson(res, response);
+    })
+    .catch(function (response) {
+      utils.writeJson(res, response);
+    });
+};
+
 module.exports.removeNote = function removeNote (req, res, next) {
   var id = req.swagger.params['id'].value;
   Developers.removeNote(id)
@@ -39,6 +50,17 @@ module.exports.removeNote = function removeNote (req, res, next) {
 module.exports.removeSong = function removeSong (req, res, next) {
   var id = req.swagger.params['id'].value;
   Developers.removeSong(id)
+    .then(function (response) {
+      utils.writeJson(res, response);
+    })
+    .catch(function (response) {
+      utils.writeJson(res, response);
+    });
+};
+
+module.exports.removeTag = function removeTag (req, res, next) {
+  var id = req.swagger.params['id'].value;
+  Developers.removeTag(id)
     .then(function (response) {
       utils.writeJson(res, response);
     })
@@ -64,7 +86,21 @@ module.exports.searchSong = function searchSong (req, res, next) {
   var id = req.swagger.params['id'].value;
   var skip = req.swagger.params['skip'].value;
   var limit = req.swagger.params['limit'].value;
-  Developers.searchSong(id,skip,limit)
+  var tags = req.swagger.params['tags'].value;
+  Developers.searchSong(id,skip,limit,tags)
+    .then(function (response) {
+      utils.writeJson(res, response);
+    })
+    .catch(function (response) {
+      utils.writeJson(res, response);
+    });
+};
+
+module.exports.searchTag = function searchTag (req, res, next) {
+  var id = req.swagger.params['id'].value;
+  var skip = req.swagger.params['skip'].value;
+  var limit = req.swagger.params['limit'].value;
+  Developers.searchTag(id,skip,limit)
     .then(function (response) {
       utils.writeJson(res, response);
     })
@@ -87,6 +123,17 @@ module.exports.updateNote = function updateNote (req, res, next) {
 module.exports.updateSong = function updateSong (req, res, next) {
   var songItem = req.swagger.params['SongItem'].value;
   Developers.updateSong(songItem)
+    .then(function (response) {
+      utils.writeJson(res, response);
+    })
+    .catch(function (response) {
+      utils.writeJson(res, response);
+    });
+};
+
+module.exports.updateTag = function updateTag (req, res, next) {
+  var tagItem = req.swagger.params['TagItem'].value;
+  Developers.updateTag(tagItem)
     .then(function (response) {
       utils.writeJson(res, response);
     })
